public interface IBroken
{
    void breaking();
}