public interface IDabbling
{
    void dabble();
}