public interface IDizzy
{
    void spin();
}