public interface IFlyable
{
    void fly();
}