public interface IQuackable
{
    void quack();
}