public interface ISwinable
{
    void swin();
}